--- a/Create.html
+++ b/Create.html
@@ -76,18 +76,16 @@
   <label for="D1"> Aston Martin-TBA</label><br>
   <input type="checkbox" id="Alpine-Renault" name="Alpine-Renault" value="Alpine-Renault">
   <label for="D1"> Alpine-Renault</label><br>
-    <input type="checkbox" id="Alpine-Renault" name="Alpine-Renault" value="Alpine-Renault">
-  <label for="D1"> Alpine-Renault</label><br>
-  <input type="checkbox" id="Alpine-Renault" name="Alpine-Renault" value="Alpine-Renault">
-  <label for="D1"> Alpine-Renault</label><br>
-  <input type="checkbox" id="Alpine-Renault" name="Alpine-Renault" value="Alpine-Renault">
-  <label for="D1"> Alpine-Renault</label><br>
-  <input type="checkbox" id="Alpine-Renault" name="Alpine-Renault" value="Alpine-Renault">
-  <label for="D1"> Alpine-Renault</label><br>
-  <input type="checkbox" id="Alpine-Renault" name="Alpine-Renault" value="Alpine-Renault">
-  <label for="D1"> Alpine-Renault</label><br>
-  <input type="checkbox" id="Alpine-Renault" name="Alpine-Renault" value="Alpine-Renault">
-  <label for="D1"> Alpine-Renault</label><br>
+    <input type="checkbox" id="Ferrari" name="Ferrari" value="Ferrari">
+  <label for="D1"> Ferrari</label><br>
+    <input type="checkbox" id="Haas-Ferrari" name="Haas-Ferrari" value="Haas-Ferrari">
+  <label for="D1"> Haas-Ferrari</label><br>
+    <input type="checkbox" id="McLaren-Mercedes" name="McLaren-Mercedes" value="McLaren-Mercedes">
+  <label for="D1"> McLaren-Mercedes</label><br>
+    <input type="checkbox" id="Mercedes-AMG" name="Mercedes-AMG" value="Mercedes-AMG">
+  <label for="D1"> Mercedes-AMG</label><br>
+    <input type="checkbox" id="Red Bull Racing" name="Red Bull Racing" value="Red Bull Racing">
+  <label for="D1"> Red Bull Racing</label><br>
 
 </form>
 </body>
