--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <section class="signup-form">
 	<h2>Sign Up!</h2>
-	<form action="includes/signup.inc.php" method="post">
+	<form action="/signup.inc.php" method="post">
 		<input type="text" name="username" placeholder="Please enter your Username">
 		<input type="email" name="email" placeholder="Please enter your Email">
 		<input type="password" name="password" placeholder="Please enter your Password">
@@ -24,7 +24,7 @@
 
 <section class="login-form">
 	<h2>Login!</h2>
-	<form action="includes/login.inc.php" method="post">
+	<form action="/login.inc.php" method="post">
 		<input type="text" name="username" placeholder="Please enter your Username">
 		<input type="email" name="email" placeholder="Please enter your Email">
 		<input type="password" name="password" placeholder="Please enter your Password">
