--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 	<h2>Sign Up!</h2>
 	<form action="/signup.inc.php" method="post">
 		<input type="text" name="username" placeholder="Please enter your Username">
-		<input type="email" name="email" placeholder="Please enter your Email">
 		<input type="password" name="password" placeholder="Please enter your Password">
 		<button type="submit" name="submit"><a href="Create.html">Sign Up!</a></button>
 		<input type="checkbox" id="isNotif" name="isNotif" value="isNotif">
@@ -26,9 +25,8 @@
 	<h2>Login!</h2>
 	<form action="/login.inc.php" method="post">
 		<input type="text" name="username" placeholder="Please enter your Username">
-		<input type="email" name="email" placeholder="Please enter your Email">
 		<input type="password" name="password" placeholder="Please enter your Password">
-		<button type="submit" name="submit">Login!</button>
+		<button type="submit" name="submit"><a href="Create.html">Login!</a></button>
 	</form>
 </section>
 
