--- a/index.html
+++ b/index.html
@@ -9,26 +9,22 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<section class="signup-form">
-	<h2>Sign Up!</h2>
-	<form action="/signup.inc.php" method="post">
-		<input type="text" name="username" placeholder="Please enter your Username">
-		<input type="password" name="password" placeholder="Please enter your Password">
-		<button type="submit" name="submit"><a href="Create.html">Sign Up!</a></button>
-		<input type="checkbox" id="isNotif" name="isNotif" value="isNotif">
-		<label for="isNotif"> Push Notifications?</label><br>
 
-	</form>
-</section>
 
 <section class="login-form">
 	<h2>Login!</h2>
-	<form action="/login.inc.php" method="post">
-		<input type="text" name="username" placeholder="Please enter your Username">
-		<input type="password" name="password" placeholder="Please enter your Password">
-		<button type="submit" name="submit"><a href="Create.html">Login!</a></button>
+	<form action="login.inc.php">
+		<input type="text" name="username" placeholder="Please enter your Username" required>
+		<input type="password" name="password" placeholder="Please enter your Password" required>
+		<button type="submit" name="submit" >Login!</a></button>
+		
+		
+
+
 	</form>
+<h5>Not a user?<a href="register.html">Register!</a></h5>
 </section>
+
 
 
 </body>
