--- a/register.html
+++ b/register.html
@@ -3,8 +3,9 @@
 	<form action="signup.inc.php" method="post">
 		<input type="text" name="username" placeholder="Please enter your Username"required>
 		<input type="password" name="password" placeholder="Please enter your Password" required>
-		<button type="submit" name="submit"><a href="Create.html">Sign Up!</a></button>
-		<input type="checkbox" id="isNotif" name="isNotif" value="isNotif" required>
+		<input type="email" name="email" placeholder="Please enter your Email" required>
+		<input type="checkbox" id="isNotif" name="isNotif" value="isNotif" >
 		<label for="isNotif"> Push Notifications?</label><br>
+		<button type="submit" name="submit">Sign Up!</a></button>
 	</form>
 </section>
