--- a/register.html
+++ b/register.html
@@ -1,11 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title></title>
+</head>
+<body>
 <section class="signup-form">
 	<h2>Sign Up!</h2>
-	<form action="signup.inc.php" method="post">
+	<form action="signup.inc.php">
 		<input type="text" name="username" placeholder="Please enter your Username"required>
 		<input type="password" name="password" placeholder="Please enter your Password" required>
 		<input type="email" name="email" placeholder="Please enter your Email" required>
 		<input type="checkbox" id="isNotif" name="isNotif" value="isNotif" >
 		<label for="isNotif"> Push Notifications?</label><br>
-		<button type="submit" name="submit">Sign Up!</a></button>
+		<button type="submit" name="submit">Sign Up!</button>
 	</form>
 </section>
+
+</body>
+</html>
