--- a/viewleaderboard.html
+++ b/viewleaderboard.html
@@ -2,7 +2,7 @@
 <body>
 
 <form action="evaluate.php" method="get">
-	Name: <input type="text" name="name"> <br>
+	Name: <input type="text" name = 'name'> <br>
 <input type="submit">
 </form>
 
