--- a/sarah.html
+++ b/sarah.html
@@ -12,23 +12,18 @@
 <!--hi theja this is where the comment form for the brackets start-->
 
 <table>
-        <form>
-        <h2>Bracket Search</h2>
+        <form action="sarah.php">
+        <h2>Post Comment</h2>
         <label for="Bracket Search"></label><br>
-<br>
         <input type="text" id="Bracket_Name" name="Bracket_Name" value=""><br>
         <h2>Comments</h2>
-        <form action="sarah.php">
         <label for="comment_author" class="required">Your name</label>
         <input type="text" name="comment_author" id="comment_author" value="" tabindex="1" required="required">
         <br>
         <label for="comment" class="required">Your message</label>
         <textarea name="comment" id="comment" rows="5" tabindex="5"  required="required"></textarea>
-<br>
         <input type="hidden" name="comment_post_ID" value="1" id="comment_post_ID" />
-    <br>
         <input name="submit" type="submit" value="Submit Comment" />
-
         </form>
 
 </table>
